--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@ body {
     background-image: url("../images/teste1.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .div-login {
@@ -20,4 +21,23 @@ body {
     .div-login, .div-presentation {
       margin: 0px 400px 0px 400px;
     }
-  }
+}
+
+input {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 3px 0;
+    box-sizing: border-box;
+    border: 1px solid #B6B5B5;
+    border-radius: 5px;
+}
+
+button[type=submit] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    background-color: #262626;
+    color: white;
+    border: 1px solid white;
+    border-radius: 5px;
+}
