--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
-    background-image: url("../images/teste1.jpg");
+    /* background-image: url("../images/fundo6.jpg"); */
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
