Integração com BD melhorada e design da home iniciada

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,10 @@ body {
     margin: 20px;
 }
 
+.div-tasks {
+    width: 800px;
+}
+
 @media screen and (min-width: 728px) {
     body {
         display: flex;
