--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+::-webkit-scrollbar {
+    width: 0px;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     background-size: cover;
@@ -6,16 +10,9 @@ body {
 }
 
 .div-home {
-    background-color: white;
+    background-color: #FFF;
     border-radius: 10px;
     margin: 20px;
-
-    /*
-    MODO DARK DO ERIK
-    
-    background-color: #262626;
-    color: #FFF;
-    */
 }
 
 .div-opts-task, .user-opt {
@@ -27,7 +24,14 @@ body {
     justify-content: space-between;
 }
 
+.angle-user, .angle-task {
+    transition: all ease-in-out .20s;
+}
 
+.flip {
+    transform: rotate(-180deg);
+    color: #818181;
+}
 
 @media screen and (min-width: 728px) {
     body {
@@ -71,13 +75,20 @@ button {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
-    color: white;
-    border: 1px solid white;
+    color: #FFF;
+    border: 1px solid #FFF;
     border-radius: 5px;
 }
 
 button[type=submit] {
     background-color: #262626;
+}
+
+.task-important {
+    background-color: #bb2205;
+    border-radius: 100px;
+    width: 70px;
+    height: 15px;
 }
 
 .btn-first {
@@ -92,6 +103,13 @@ button[type=submit] {
     border: 2px solid;
     border-color: #ec524b;
     color: #ec524b;
+}
+
+.btn-third {
+    background-color: rgb(253, 253, 253);
+    border: 2px solid;
+    border-color: #383838;
+    color: #383838;
 }
 
 .btn-create-task {
@@ -120,7 +138,76 @@ button[type=submit]:hover {
     color: #FFF;
 }
 
+.btn-third:hover {
+    transition: all ease-in-out .20s;
+    background-color: #383838;
+    color: #FFF;
+}
+
 .btn-create-task:hover {
     transition: all ease-in-out .20s;
     background-color: black;
+}
+
+/* -- DARK MODE --*/
+
+.dark-mode {
+    background-color: #262626;
+    color: #FFF;
+}
+
+.dark-hr {
+    background-color: #FFF;
+    opacity: 0.5;
+}
+
+.btn-create-task {
+    background-color: #262626;
+    border: 2px solid;
+    border-color: #FFF;
+    color: #FFF;
+}
+
+.btn-create-task:hover {
+    background-color: #343434;
+}
+
+.dark-first {
+    opacity: 1;
+    background-color: #79b6ce;
+    border: 2px solid;
+    border-color: #79b6ce;
+    color: #FFF;
+}
+
+.dark-first:hover {
+    transition: all ease-in-out .20s;
+    border-color: #318fb5;
+    color: #FFF;
+}
+
+.dark-second {
+    background-color: #df7a75;
+    border: 2px solid;
+    border-color: #df7a75;
+    color: #FFF;
+}
+
+.dark-second:hover {
+    transition: all ease-in-out .20s;
+    border-color: #ec524b;
+    color: #FFF;
+}
+
+.dark-third {
+    background-color: #262626;
+    border: 2px solid;
+    border-color: #FFF;
+    color: #FFF;
+}
+
+.dark-third:hover {
+    transition: all ease-in-out .20s;
+    border-color: #FFF;
+    color: #FFF;
 }
