--- a/styles/styles_fando.css
+++ b/styles/styles_fando.css
@@ -38,7 +38,7 @@ body {
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
-        justify-content: flex-start;
+        justify-content: center;
         align-content: stretch;
         align-items: flex-start;
         margin: 0px 100px 0px 100px;
